# google-ads-mcp

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
config/: adloop-config.yaml.example  claude-desktop-config.json.example  config.yaml.example  mcp.json.example
docs/: troubleshooting.md
skills/google-ads-analyze/: SKILL.md
skills/google-ads-ga4/: SKILL.md
skills/google-ads-manage/: SKILL.md
skills/google-ads-setup/: SKILL.md
src/google_ads_mcp/: __init__.py  __main__.py  ads.py  auth.py  config.py  ga4.py  safety.py  server.py
